--- a/package.json
+++ b/package.json
@@ -16,7 +16,18 @@
     "url": "https://github.com/JailBreakC/niushow-demo/issues"
   },
   "homepage": "https://github.com/JailBreakC/niushow-demo#readme",
-  "dependencies": {
-    "gulp": "^3.9.0"
+  "dependencies": {},
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-clean": "^0.3.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-less": "^3.0.3",
+    "gulp-livereload": "^3.8.1",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.4.1",
+    "gulp-util": "^3.0.6",
+    "tiny-lr": "^0.2.0"
   }
 }
